<resources>
    <string name="app_name">calculator_app_java</string>
    <string name="calculator_title">Calculator</string>
    <string name="first_num">Num1:</string>
    <string name="second_num">Num2:</string>
    <string name="plus_operator">+</string>
    <string name="minus_operator">-</string>
    <string name="times_operator">x</string>
    <string name="divide_operator">/</string>
    <string name="result_name">Result:</string>
    <string name="result_value">0</string>
</resources>